css/theme.css
/* ... */
.slick-list:focus {
	outline: none !important;
}
.slick-list.dragging {
	cursor: pointer;
	cursor: hand;
}
.slick-slider .slick-track,
.slick-slider .slick-list {
	-webkit-transform: translate3d(0, 0, 0);
	-moz-transform: translate3d(0, 0, 0);
	-ms-transform: translate3d(0, 0, 0);
	-o-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}
.slick-track {
	position: relative;
	top: 0;
	left: 0;
	display: block;
}
.slick-track:before,
.slick-track:after {
	display: table;
	content: '';
}
.slick-track:after {
	clear: both;
}
.slick-loading .slick-track {
	visibility: hidden;
}
.slick-slide {
	display: none;
	float: left;
	height: 100%;
	min-height: 1px;
	outline: none !important;
	cursor: pointer;
}
.testimonials-nav .slick-active,
.testimonials-nav .slick-center,
.testimonials-nav .slick-current {
	cursor: default;
}
[dir='rtl'] .slick-slide {
	float: right;
}
.slick-slide img {
	display: block;
}
.slick-slide.slick-loading img {
	display: none;
}
.slick-slide.dragging img {
	pointer-events: none;
}
.slick-initialized .slick-slide {
	display: block;
}
.slick-loading .slick-slide {
	visibility: hidden;
}

/* --- Custom Slick --- */
.carouselslider button{
	text-shadow:none;
	cursor:pointer;
	box-shadow:none;
	border:0;
	border-radius:0;
	-webkit-border-radius:0;
}
/* --- Dots --- */
ul.slick-dots {
	margin: 0;
	padding: 0;
	line-height: 10px;
}
.vertical ul.slick-dots {
	margin:auto 0 auto;
	position: absolute;
	top: 50%;
	right: -30px;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	width: 11px;
}
ul.slick-dots li {
	overflow:hidden;
	margin:0 12px 0 0;
	padding:0;
	width:10px;
	height:10px;
	float: none;
	cursor:pointer;
	box-shadow: none;
	display: inline-block;
	vertical-align: top;
	background: none;
	outline: none;
}
.vertical ul.slick-dots li {
	margin:0 0 15px 0;
}
.module_team ul.slick-dots li {
	float: none;
}
ul.slick-dots li button {
	padding:0;
	width:10px;
	height:10px;
	border-radius:0;
	opacity: .5;
	color: transparent;
	background: #ffffff;
	border: none;
	position: relative;
	outline: none;
	cursor: pointer;
	transition: all .3s;
	-webkit-transition: all .3s;
}
ul.slick-dots li.slick-active button {
	margin: 0px;
	width:10px;
	height:10px;
	opacity: 1;
}

ul.slick-dots li button:hover {
	opacity: 1;
}

.dark_bg ul.slick-dots li button {
	border-color: #fff;
}

/* --- Arrows --- */
.slick-prev,
.slick-next {
	width: 20px;
	height: 19px;
	min-height: 19px;
	display:block;
	font-size:0;
	line-height:0;
	cursor:pointer;
	border: none !important;
	padding: 0;
	position:absolute;
	bottom: 60px;
	transition: all .3s;
	-webkit-transition: all .3s;
	z-index:50;
}

.slick-prev,
.slick-prev:hover {
	right: 40px;
	background: #ff00ff;
	background-size: 20px 19px;
}

.slick-next,
.slick-next:hover {
	right: 0;
	background: #ff00ff;
	background-size: 20px 19px;
}

.slick-prev:hover,
.slick-next:hover {
	opacity: .5;
}

/* ---------------------------- */
/* ---------- Header ---------- */
/* ---------------------------- */
.cherga_header_mobile_logo,
.cherga_header_mobile_menu_toggler,
.cherga_mobile_menu_wrapper {
	display: none;
}

header.cherga_main_header {
	display: block;
	background: #171717;
	position: relative;
	z-index: 111;
}
header.cherga_main_header.cherga_sticky_menu_on.cherga_stick_me.cherga_header_solid_style {
	background: rgba(23, 23, 23, .9);
}
header.cherga_main_header:after {
	content: '';
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 1px;
	background: rgba(255, 255, 255, .05);
}
header.cherga_main_header.cherga_border_off:after {
	display: none;
}
.error404 header.cherga_main_header:after {
	display: none;
}
header.cherga_main_header .cherga_main_header_wrapper {
	font-size: 0;
	line-height: 0;
	position: relative;
	z-index: 88;
}
header.cherga_main_header .cherga_header_left_part,
header.cherga_main_header .cherga_header_middle_part,
header.cherga_main_header .cherga_header_right_part {
	display: inline-block;
	vertical-align: middle;
	box-sizing: border-box;
}
.cherga_header_left_part {
	text-align: left;
}
.cherga_header_middle_part {
	text-align: center;
}
.cherga_header_middle_part nav.cherga_nav {
	transform: translateX(2px);
}
.cherga_header_right_part {
	text-align: right;
}
.cherga_header_socials:empty {
	display: none;
}
.cherga_header_socials a {
	font-size: 16px;
	line-height: 20px;
	display: inline-block;
	margin: 0 10px;
	vertical-align: top;
	color: #ffffff;
}
header.cherga_main_header .cherga_logo_cont {
	padding: 40px 0;
}
header.cherga_sticky_menu_on .cherga_logo_cont {
	transition: all 200ms;
}
header.cherga_sticky_menu_on.cherga_stick_me .cherga_logo_cont {
	padding: 10px 0;
}
header.cherga_main_header.cherga_logo_left .cherga_logo_cont {
	margin-left: 50px;
}
header.cherga_main_header.cherga_logo_left .cherga_logo_cont a {
	display: block;
	width: 87px;
	height: 87px;
	background: url("../img/logo.png") no-repeat center;
	background-size: 87px 87px;
}
header.cherga_main_header.cherga_sticky_menu_on .cherga_image_logo {
	transition: all 200ms;
}
header.cherga_main_header.cherga_sticky_menu_on.cherga_stick_me .cherga_image_logo {
	width: 44px;
	height: 44px;
	background-size: 44px 44px;
}
header.cherga_main_header.cherga_logo_middle .cherga_header_socials,
header.cherga_main_header.cherga_logo_left .cherga_header_socials {
	margin-right: 40px;
	white-space: nowrap;
	transition: margin 200ms;
}
header.cherga_main_header.cherga_logo_middle nav.cherga_nav {
	padding-left: 24px;
}

header.cherga_main_header.cherga_logo_right .cherga_logo_cont {
	margin-right: 50px;
}
header.cherga_main_header.cherga_logo_right .cherga_header_socials {
	margin-left: 40px;
}
.cherga_header_holder {
	/* Height set dynamically by JavaScript */
}
/* ... */

